Intro and a bunch of text parts, two column layout

--- a/template.tex
+++ b/template.tex
@@ -1,10 +1,10 @@
-\documentclass[12pt]{amsart}
+\documentclass[10pt,twocolumn]{article}
  
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
 \usepackage[english]{babel}
 \usepackage{geometry}
-\geometry{verbose,letterpaper,tmargin=2cm,bmargin=2cm,lmargin=2.5cm,rmargin=2.5cm}
+\geometry{verbose,letterpaper,tmargin=2.5cm,bmargin=2.5cm,lmargin=1cm,rmargin=1cm}
 
 \usepackage[utf8]{inputenc}
 \usepackage[sc]{mathpazo}
@@ -55,7 +55,7 @@ $if(toc)$
 \tableofcontents
 $endif$
  
- \doublespacing
+%\doublespacing
  
 $body$
  
