Preparing for PeerJ

--- a/template.tex
+++ b/template.tex
@@ -1,15 +1,16 @@
-\documentclass[10pt,twocolumn]{article}
+\documentclass[12pt]{article}
  
 \usepackage[T1]{fontenc}
 \usepackage{amsmath}
 \usepackage[english]{babel}
 \usepackage{geometry}
-\geometry{verbose,letterpaper,tmargin=2.5cm,bmargin=2.5cm,lmargin=1cm,rmargin=1cm}
+\geometry{verbose,letterpaper,tmargin=2.5cm,bmargin=2.5cm,lmargin=2.5cm,rmargin=2.5cm}
 
 \usepackage[utf8]{inputenc}
 \usepackage[sc]{mathpazo}
 
 \usepackage{setspace}
+\usepackage{lineno}
 
 \setlength{\parindent}{0pt}
 \setlength{\parskip}{6pt plus 2pt minus 1pt}
@@ -55,7 +56,7 @@ $if(toc)$
 \tableofcontents
 $endif$
  
-%\doublespacing
+\doublespacing
  
 $body$
  
