--- a/template.tex
+++ b/template.tex
@@ -6,6 +6,8 @@
 \usepackage{geometry}
 \geometry{verbose,letterpaper,tmargin=2.5cm,bmargin=2.5cm,lmargin=2.5cm,rmargin=2.5cm}
 
+\usepackage[loosequotes]{MinionPro}
+
 \usepackage[utf8]{inputenc}
 
 \usepackage{setspace}
@@ -55,7 +57,7 @@ $if(toc)$
 \tableofcontents
 $endif$
  
-\doublespacing
+\doublespacing\linenumbers
  
 $body$
  
